# treehole

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: build.yml
docs/: installations.md  settings.md  translations.md
treehole/: __app__.py  __init__.py  __main__.py  github.py  treehole.py  utils.py
treehole/locale/zh_CN/LC_MESSAGES/: treehole.po
treehole/locale/zh_HK/LC_MESSAGES/: treehole.po
treehole/locale/zh_TW/LC_MESSAGES/: treehole.po
treehole/static/: app.css  app.js
treehole/templates/: base.html  list.html  post.html
